# python-podman

./: .travis.yml  AUTHORS  CODE-OF-CONDUCT.md  ChangeLog  Makefile  README.md  SECURITY.md  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
examples/: eg_rm.py
podman/: README.md  __init__.py  client.py  setup.cfg
podman/libs/: __init__.py  containers.py  errors.py  images.py  pods.py  system.py  tunnel.py  volumes.py
podman/podman/libs/: system.py
podman/test/: test_runner.sh  test_system.py
pypodman/: README.md  setup.cfg  setup.py
pypodman/pypodman/lib/: action_base.py  podman_parser.py
test/: podman_testcase.py  test_client.py  test_containers.py  test_images.py  test_pods_no_ctnrs.py  test_runner.sh
tests/libs/: test_pod.py
tools/: synchronize.sh
