[metadata]
name = podman
home-page = https://github.com/containers/python-podman
project_urls =
    Bug Tracker = https://github.com/containers/python-podman/issues
    Source Code = https://github.com/containers/python-podman
summary = A library to interact with a Podman server
description-file = 
    README.md
author = Jhon Honce
author-email = jhonce@redhat.com
license = Apache Software License
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.4
    Topic :: Software Development
keywords =
    varlink
    libpod
    podman

[files]
packages =
    podman

[extras]
devel=
    fixtures
    pbr
    tox
    bandit

[wheel]
universal = 1
