[metadata]
name = podman
home-page = https://github.com/containers/python-podman
summary = A library to interact with a Podman server
description-file =
    README.md
    ChangeLog
    AUTHORS
author = Jhon Honce
long_description_content_type = text/markdown
author_email = jhonce@redhat.com
license = Apache Software License
project_urls =
    Bug Tracker = https://github.com/containers/python-podman/issues
    Source Code = https://github.com/containers/python-podman
python-requires = >=3.5
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development
keywords = varlink, libpod, podman
requires-dist =
    setuptools
    wheel

[files]
packages =
    podman

[extras]
devel=
    fixtures
    pbr
    tox
    bandit
