[metadata]
name = pypodman
home-page = https://github.com/containers/python-podman
project_urls =
    Bug Tracker = https://github.com/containers/python-podman/issues
    Source Code = https://github.com/containers/python-podman
summary = A client for communicating with a Podman server
description-file = 
    README.md
author = Jhon Honce
author-email = jhonce@redhat.com
license = Apache Software License
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3.4
    Topic :: System :: Systems Administration
    Topic :: Utilities
keywords =
    varlink
    libpod
    podman
    pypodman

[files]
packages =
    pypodman

[extras]
devel=
    fixtures
    pbr
    tox
    bandit

[entry_points]
console_scripts =
    pypodman = pypodman.main:main

[wheel]
universal = 1
